# music-dl

./: .gitignore  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-report.yml
.github/workflows/: build-desktop.yml  edge-desktop.yml  gui-smoke.yml
.pi/checkpoint/: state.json
TIDALDL-PY/: .gitignore  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  sidecar_entry.py  updatelog.md
TIDALDL-PY/docs/: backend-guide.md  bot-onboarding.md  design-system.md  local-lyrics.md
TIDALDL-PY/scripts/: build-sidecar.sh
TIDALDL-PY/src-tauri/: Cargo.toml  tauri.conf.json
TIDALDL-PY/tests/: conftest.py  test_album_lookup_matching.py  (+25 more)
docker/: Dockerfile  README.md  docker-compose.yml
docs/: bug-reporting.md
scripts/: edge_channel.py  figma-preflight.sh  install-docker.sh  install-macos-local.sh  install-windows-local.ps1  install.ps1  install.sh  release-smoke.sh  release_version.py  restart-gui.sh
tests/: test_edge_channel.py  test_edge_installers.sh  test_edge_workflow.sh  test_macos_local_installer.sh  test_macos_release_installer.sh  test_one_line_install_docs.sh  test_release_version.py  test_stable_release_workflow.sh  test_windows_local_installer.sh
tidaldl-py/: Dockerfile  README 2.md  README.md  package-lock.json  pyproject 2.toml  pyproject.toml  sidecar_entry.py  updatelog 2.md  updatelog.md
tidaldl-py/src-tauri/: Cargo.toml  build.rs  tauri.ci.conf.json  tauri.conf.json
tidaldl-py/src-tauri/loading/: index 2.html
tidaldl-py/src-tauri/src/: lib.rs  updater.rs
(+233 files in other folders)
